--- a/index.html
+++ b/index.html
@@ -150,24 +150,25 @@
             </div>
             <div class="filter-item">
               <label for="low-density-grid-slider">Grid Subdivision:</label>
+              <!-- Updated slider: now from -4 to 4 with step 1 and default 0 -->
               <input 
                 type="range" 
                 id="low-density-grid-slider" 
                 name="low-density-grid-size" 
-                min="1" 
+                min="-4" 
                 max="4" 
-                step="0.1" 
-                value="2" 
+                step="1" 
+                value="0" 
                 disabled
               />
               <input 
                 type="number" 
                 id="low-density-grid-number" 
                 name="low-density-grid-size" 
-                min="1" 
+                min="-4" 
                 max="4" 
-                step="0.1" 
-                value="2" 
+                step="1" 
+                value="0" 
                 disabled
               />
             </div>
@@ -198,24 +199,25 @@
             </div>
             <div class="filter-item">
               <label for="high-density-grid-slider">Grid Subdivision:</label>
+              <!-- Updated slider: now from -4 to 4 with step 1 and default 0 -->
               <input 
                 type="range" 
                 id="high-density-grid-slider" 
                 name="high-density-grid-size" 
-                min="1" 
+                min="-4" 
                 max="4" 
-                step="0.1" 
-                value="2" 
+                step="1" 
+                value="0" 
                 disabled
               />
               <input 
                 type="number" 
                 id="high-density-grid-number" 
                 name="high-density-grid-size" 
-                min="1" 
+                min="-4" 
                 max="4" 
-                step="0.1" 
-                value="2" 
+                step="1" 
+                value="0" 
                 disabled
               />
             </div>
