--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="filter-item">
               <input type="range" id="connection-slider" name="connections" min="1" max="50" value="7" disabled />
-              <span id="connection-value">7</span> Light Years
+              <input type="number" id="connection-number" name="connections" min="1" max="50" value="7" disabled /> Light Years
             </div>
           </div>
         </fieldset>
