--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
               <label for="enable-density-filter">Enable Density Filter</label>
             </div>
             <div class="filter-item">
-              <label for="density-subdivision-percent-slider">Subdivision Threshold (%)</label>
-              <input type="range" id="density-subdivision-percent-slider" name="density-subdivision-percent" min="1" max="20" step="1" value="5" disabled />
-              <input type="number" id="density-subdivision-percent-number" name="density-subdivision-percent" min="1" max="20" step="1" value="5" disabled />
-              <span id="density-subdivision-percent-value">5</span>%
+              <label for="density-subdivision-percent-slider">Star Count Threshold</label>
+              <input type="range" id="density-subdivision-percent-slider" name="density-subdivision-percent" min="1" max="100" step="1" value="5" disabled />
+              <input type="number" id="density-subdivision-percent-number" name="density-subdivision-percent" min="1" max="100" step="1" value="5" disabled />
+              <span id="density-subdivision-percent-value">5</span>
             </div>
           </div>
         </fieldset>
